chore: completed refactoring in HTML and typescript, everything is working fine

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/abuse_case.component.html
@@ -1,3 +1,4 @@
+<my-spinner [isRunning]="!isAbuseDataLoaded"></my-spinner>
 <form [formGroup]="caseAbuseForm">
     <div class="row" *ngIf="caseBook">
 
