--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/household_case.component.html
@@ -1,3 +1,4 @@
+<my-spinner [isRunning]="!isHouseHoldDataLoaded"></my-spinner>
 <form [formGroup]="clientAndHouseholdForm">
     <div class="row">
 
