--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/mental_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/mental_case.component.html
@@ -1,3 +1,4 @@
+<my-spinner [isRunning]="!isCaseBookDataLoaded"></my-spinner>
 <div class="row" style="">
     <div class="d-flex flex-column fill-width">
         <div class="add-new-button-container">
