--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/physicalHealth_case.component.html
@@ -1,3 +1,4 @@
+<my-spinner [isRunning]="!isPhysicalHealthDataLoaded"></my-spinner>
 <form [formGroup]="physicalHealthForm">
     <div class="row">
         <div class="col-md-6 d-flex flex-column">
