--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/legal_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/legal_case.component.html
@@ -1,3 +1,4 @@
+<my-spinner [isRunning]="!isLegalDataLoaded"></my-spinner>
 <form [formGroup]="caseLegalForm">
     <div class="row">
         <div class="col-md-6 d-flex flex-column">
