chore: removed in line css and added it to cases.detailed.scss

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/children_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/children_case.component.html
@@ -5,7 +5,7 @@
             <button class="btn btn-primary" (click)="addNewChild()">Add New Children &nbsp;<i class="fa fa-plus"></i></button>
         </div>
         <div class="table-responsive">
-            <table class="table" style="color:whitesmoke">
+            <table class="table tableColor">
                 <thead class="thead-inverse">
                     <tr>
                         <th>Name</th>
