--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/feedback_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/feedback_case.component.html
@@ -5,7 +5,7 @@
             <button class="btn btn-primary" (click)="addNewFeedback()">Add New Feedback &nbsp;<i class="fa fa-plus"></i></button>
         </div>
         <div class="table-responsive">
-            <table class="table" style="color:whitesmoke">
+            <table class="table tableColor">
                 <thead class="thead-inverse">
                     <tr>
                         <th>Respect</th>
