--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
@@ -152,7 +152,7 @@
             <button class="btn btn-primary" (click)="addNewAddress()">Add New Address &nbsp;<i class="fa fa-plus"></i></button>
         </div>
         <div class="table-responsive">
-            <table class="table" style="color:whitesmoke">
+            <table class="table tableColor">
                 <thead class="thead-inverse">
                     <tr>
                         <th>Address</th>
