--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/primary-info.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/primary-info.component.html
@@ -4,7 +4,7 @@
                 <div class="card-header">
                     Primary Info
                 </div>
-                <div class="card-block primary-info-view">
+                <div class="card-block info-view">
                     <div class="form-group">
                         <label>Center  :</label>
                         <span>{{ (centerOptionList | MatchesPipe:primaryForm.CenterId) }}</span>
@@ -41,7 +41,7 @@
                 <div class="card-header">
                     Client Details
                 </div>
-                <div class="card-block primary-info-view">
+                <div class="card-block info-view">
                     <div class="form-group">
                         <label>Mobile  :</label>
                         <span>{{ primaryForm.MobileNumber }}</span>
