--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/spouse.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-view/spouse.component.html
@@ -4,7 +4,7 @@
                 <div class="card-header">
                     Spouse Info
                 </div>
-                <div class="card-block primary-info-view">
+                <div class="card-block info-view">
                     <div class="form-group">
                         <label>Spouse Name  :</label>
                         <span>{{ spouseForm.SpouseName }}</span>
@@ -33,7 +33,7 @@
                 <div class="card-header">
                     Spouse Address
                 </div>
-                <div class="card-block primary-info-view">
+                <div class="card-block info-view">
                     <div class="form-group">
                         <label>Spouse's full address  :</label>
                         <span>{{ spouseForm.SpouseAddress }}</span>
@@ -62,7 +62,7 @@
                 <div class="card-header">
                     Emergency
                 </div>
-                <div class="card-block primary-info-view">
+                <div class="card-block info-view">
                     <div class="form-group">
                         <label>Primary Emergency Contact Name  :</label>
                         <span>{{ spouseForm.PrimaryEmergencyContactName }}</span>
