--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.scss
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.view.scss
@@ -1,12 +1,12 @@
-﻿.primary-info-view{
+﻿.info-view{
     div{
         display: flex;
         label{
-            flex: 0 1 32%;
+            flex: 0 1 34%;
             font-weight: 700;
         }
         span{
-            flex: 0 1 68%;
+            flex: 0 1 66%;
         }
     }
 
@@ -15,4 +15,16 @@
     font-weight: 700;
     color: #38ccbc;
     font-size: 16px;
+}
+.table {
+    .tr-heading {
+        background-color: rgba(10, 10, 10, 0.84);
+        color: whitesmoke
+    }
+    .tr-data {
+        color:white;
+    }
+}
+tab {
+    width: 100%;
 }
